--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@ p{
     font-size: 17px;
 }
 
+a, a:hover, a:focus, a:active {
+    text-decoration: none;
+    color: inherit;
+}
+
 /* ----------- Header ----------- */
 
 header {
@@ -31,12 +36,12 @@ header {
 
 header p{
     margin-bottom: 7px;
-    color: white;
+    color: #fffafa;
 }
 
 header h1{
         padding: 5px 0px 15px 0px;
-        color: white;
+        color: #fffafa;
 }
 
 .rightsidediv{
@@ -146,7 +151,7 @@ header h1{
 }
 
 .projectbanner h1{
-    color: white;
+    color: #fffafa;
 }
 
 .project1, .project2, .project3{
@@ -306,6 +311,8 @@ ul li
   .slider.round:before {
     border-radius: 50%;
   }
+
+ 
 
 /* ----------- Queries ----------- */
 
