Refactored header a bit more

--- a/style.css
+++ b/style.css
@@ -362,6 +362,7 @@ ul li
     .headerpicture{
         order: 2;  
         margin-bottom: 20px;  
+        margin-right: 20px;
     }
 
     .headerdarkmode{
