--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Slab:wght@300;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@300;400&family=Roboto+Slab:wght@300;500;700&display=swap');
 
 * {
     margin: 0;
@@ -15,6 +15,20 @@
     box-shadow: rgb(0 0 0 / 98%) 0px 12px 13px;
   }
 
+  #dms{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    
+  }
+
+  .headertext h1{
+    font-size: 35px;
+  }
+
+  .headertext p{
+      font-size: 19px;
+  }
+
 h1, p, h2, h3, li{
     color: #383838;
 }
@@ -27,6 +41,7 @@ h1, h2{
 h3{
     font-family: 'Roboto Slab', serif;
     font-weight: 300;
+    font-size: 25px;
 }
 
 hr{
