--- a/style.css
+++ b/style.css
@@ -6,8 +6,9 @@
   }
 
   body{
-      background: url(https://papers.co/wallpaper/papers.co-si87-light-green-blue-sky-gradation-blur-35-3840x2160-4k-wallpaper.jpg);
-
+    background: #485563;
+    background: -webkit-linear-gradient(to right, #29323c, #485563);
+    background: linear-gradient(to right, #29323c, #485563);
   }
 
   .wrapper{
